--- a/music.html
+++ b/music.html
@@ -1,102 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Hub</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #2a1b2e;
-      color: #f3e5f5;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-    }
-    h1, h2 {
-      color: #f3e5f5;
-    }
-    .tiles {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-bottom: 30px;
-    }
-    .tile {
-      background-color: #3b2640;
-      border-radius: 12px;
-      padding: 30px;
-      width: 100px;
-      height: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      font-weight: bold;
-      font-size: 1.1em;
-      color: #f3e5f5;
-      text-decoration: none;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-      transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
-    }
-    .tile:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-      background-color: #7b1fa2;
-    }
-    .section {
-      background-color: #3b2640;
-      border-radius: 12px;
-      padding: 20px;
-      margin: 20px auto;
-      max-width: 900px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 15px;
-    }
-    th, td {
-      border-bottom: 1px solid #f3e5f5;
-      padding: 8px;
-    }
-    th {
-      color: #d1c4e9;
-      cursor: pointer;
-    }
-    tr:hover {
-      background-color: #7b1fa2;
-    }
-    input, button, select {
-      border: none;
-      border-radius: 8px;
-      padding: 8px;
-      margin: 5px;
-    }
-    input {
-      width: 20%;
-    }
-    button {
-      background-color: #8e24aa;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #7b1fa2;
-    }
-    select {
-      background-color: #5e3570;
-      color: #f3e5f5;
-      cursor: pointer;
-    }
-    #albumCount, #yearCount {
-      font-weight: bold;
-      color: #f3e5f5;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
+  
 <body>
   <h1>Music Hub</h1>
 
