--- a/music.html
+++ b/music.html
@@ -8,11 +8,11 @@
 <body>
   <h1>Music Hub</h1>
 
-  <div style="margin-bottom: 20px;">
-    <a href="index.html" class="tile" style="width: 120px; height: 50px; padding: 10px; font-size: 1em; display: inline-flex; align-items: center; justify-content: center;">
-      ⬅ Home
-    </a>
-  </div>
+<div class="back-button-container">
+  <a href="https://scytale94.github.io/" class="tile back-button">
+    ⬅ Home
+  </a>
+</div>
 
   <div class="tiles">
     <a href="https://open.spotify.com" target="_blank" class="tile">🎵 Spotify</a>
