--- a/finance.html
+++ b/finance.html
@@ -1,167 +1,18 @@
 <!DOCTYPE html>
+
 <html lang="en">
+  
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Finance Hub</title>
-
-<style>
-:root {
-  --bg: #2a1b2e;
-  --section-bg: #3b2640;
-  --card-bg: #4b2b50;
-  --text: #f3e5f5;
-  --muted: #dcdcdc;
-  --accent: #8e24aa;
-  --hover: #7b1fa2;
-}
-
-body {
-  margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: var(--bg);
-  color: var(--text);
-}
-
-/* ===== HEADER ===== */
-header {
-  text-align: center;
-  padding: 30px 20px 10px;
-}
-
-header h1 {
-  margin: 0;
-  font-size: 2.4em;
-}
-
-/* ===== STANDARD BACK BUTTON ===== */
-.back-button-container {
-  text-align: center;
-  margin: 20px 0 30px;
-}
-
-.back-button {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 130px;
-  height: 48px;
-  border-radius: 10px;
-  background: var(--card-bg);
-  color: var(--text);
-  text-decoration: none;
-  font-weight: bold;
-  transition: all 0.2s ease;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-}
-
-.back-button:hover {
-  background: var(--hover);
-  transform: translateY(-3px);
-}
-
-/* ===== MAIN LAYOUT ===== */
-main {
-  max-width: 950px;
-  margin: auto;
-  padding: 0 20px 80px;
-}
-
-section {
-  background: var(--section-bg);
-  border-radius: 14px;
-  padding: 25px;
-  margin-bottom: 40px;
-  box-shadow: 0 6px 25px rgba(0,0,0,0.35);
-}
-
-h2 {
-  font-size: 1.6em;
-  margin-bottom: 20px;
-  border-bottom: 2px solid var(--text);
-  display: inline-block;
-  padding-bottom: 5px;
-}
-
-/* ===== CARDS ===== */
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-}
-
-.card {
-  background: var(--card-bg);
-  padding: 18px;
-  border-radius: 12px;
-  flex: 1 1 160px;
-  min-width: 150px;
-  text-align: center;
-  box-shadow: 0 5px 18px rgba(0,0,0,0.25);
-  transition: all 0.2s ease;
-}
-
-.card:hover {
-  transform: translateY(-5px);
-  background: var(--hover);
-}
-
-.card .label {
-  font-size: 0.9em;
-  margin-bottom: 8px;
-  color: var(--muted);
-}
-
-.card .value {
-  font-size: 1.4em;
-  font-weight: bold;
-}
-
-/* ===== INPUTS & BUTTONS ===== */
-input[type="text"],
-input[type="number"],
-input[type="date"] {
-  padding: 8px;
-  border: none;
-  border-radius: 6px;
-  background: var(--card-bg);
-  color: var(--text);
-  margin-right: 8px;
-}
-
-button {
-  padding: 6px 12px;
-  border: none;
-  border-radius: 6px;
-  background: var(--accent);
-  color: #fff;
-  cursor: pointer;
-  transition: background 0.2s;
-}
-
-button:hover {
-  background: var(--hover);
-}
-
-/* ===== TABLES ===== */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-}
-
-th, td {
-  padding: 10px 8px;
-  border-bottom: 1px solid rgba(255,255,255,0.1);
-  text-align: left;
-}
-
-canvas {
-  margin-top: 20px;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Music Hub</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
+<div class="back-button-container">
+  <a href="https://scytale94.github.io/" class="tile back-button">⬅ Home</a>
+</div>
+  
 <body>
 
 <header>
