--- a/fitness.html
+++ b/fitness.html
@@ -1,103 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fitness Hub - Running</title>
-<style>
-  :root {
-    --bg: #2a1b2e;
-    --section-bg: #3b2640;
-    --card-bg: #4b2b50;
-    --text: #f3e5f5;
-    --muted: #dcdcdc;
-    --accent: #8e24aa;
-    --hover: #7b1fa2;
-    --progress-bg: #3b2640;
-    --progress-fill: #ffcd37;
-  }
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: var(--bg);
-    color: var(--text);
-  }
-  header {
-    text-align: center;
-    padding: 30px 20px;
-  }
-  header h1 {
-    margin: 0;
-    font-size: 2.2em;
-    color: var(--accent);
-  }
-  main {
-    max-width: 900px;
-    margin: 40px auto;
-    padding: 0 20px 80px;
-  }
-  section {
-    background: var(--section-bg);
-    border-radius: 12px;
-    padding: 20px;
-    margin-bottom: 40px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-  }
-  h2 {
-    font-size: 1.6em;
-    margin-bottom: 20px;
-    border-bottom: 2px solid var(--accent);
-    display: inline-block;
-    padding-bottom: 5px;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-  }
-  th, td {
-    padding: 8px 6px;
-    border-bottom: 1px solid rgba(255,255,255,0.1);
-    text-align: left;
-  }
-  th {
-    color: var(--accent);
-  }
-  input[type="number"], input[type="text"], input[type="date"] {
-    padding: 6px;
-    border: none;
-    border-radius: 6px;
-    background: var(--card-bg);
-    color: var(--text);
-    margin-right: 8px;
-  }
-  button {
-    padding: 6px 12px;
-    border: none;
-    border-radius: 6px;
-    background: var(--accent);
-    color: #fff;
-    cursor: pointer;
-  }
-  button:hover {
-    background: var(--hover);
-  }
-  .progress-container {
-    width: 100%;
-    background: var(--progress-bg);
-    border-radius: 10px;
-    overflow: hidden;
-    height: 20px;
-    margin-top: 10px;
-  }
-  .progress-fill {
-    height: 100%;
-    background: var(--progress-fill);
-    width: 0%;
-    transition: width 0.3s;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Music Hub</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+  
+<div class="back-button-container">
+  <a href="https://scytale94.github.io/" class="tile back-button">⬅ Home</a>
+</div>
+
 <body>
 <header>
   <h1>Running Hub</h1>
