--- a/faith.html
+++ b/faith.html
@@ -1,70 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Faith Hub</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #2a1b2e;
-      color: #f3e5f5;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-    }
-    h1, h2 {
-      color: #e1bee7;
-    }
-    .section {
-      background-color: #3b2640;
-      border-radius: 12px;
-      padding: 20px;
-      margin: 20px auto;
-      max-width: 800px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-    button {
-      background-color: #8e24aa;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 10px 16px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    button:hover {
-      background-color: #7b1fa2;
-    }
-    ul {
-      text-align: left;
-      margin: 0 auto;
-      padding: 0;
-      list-style-type: none;
-      max-width: 600px;
-    }
-    li {
-      padding: 5px 0;
-      border-bottom: 1px solid #5e3570;
-    }
-
-    /* NEW: underline prayer subheadings only */
-    .prayer-heading {
-      border-bottom: 2px solid #e1bee7;
-      padding-bottom: 4px;
-      margin-top: 14px;
-      margin-bottom: 6px;
-      list-style: none;
-    }
-
-    .verse-box {
-      background-color: #4b2b50;
-      border-radius: 10px;
-      padding: 15px;
-      margin-bottom: 15px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
+<div class="back-button-container">
+  <a href="https://scytale94.github.io/" class="tile back-button">⬅ Home</a>
+</div>
+
 <body>
   <h1>Faith Hub</h1>
 
